MSS-1482-pdp-core-web-vital-seo-desktop-fix-recomnadation-carousel-shifting

--- a/mvmt/cartridges/app_custom_storefront_mvmt/cartridge/client/default/scss/product/detail.scss
+++ b/mvmt/cartridges/app_custom_storefront_mvmt/cartridge/client/default/scss/product/detail.scss
@@ -702,7 +702,11 @@
     max-width: $container-max-width;
     padding: rem(16) 0 0;
     margin: 0 auto;
-
+    
+    .product-brand-info {
+        width: 100%;
+        height: rem(21);
+    }
     @include media-breakpoint-up(md-down) {
         padding: rem(45) rem(32);
 
@@ -1110,6 +1114,8 @@
             letter-spacing: rem(5);
             line-height: rem(28);
             margin-bottom: rem(6);
+            width: 100%;
+            height: auto;
 
             @include media-breakpoint-up(md-down) {
                 text-align: left;
@@ -1306,8 +1312,15 @@
         }
 
         &-products {
+            display: flex;
+
+            .slick-track {
+                width: rem(351)!important;
+            }
+
             .slick-slide {
                 padding: 0 rem(10);
+                width: rem(117)!important;
             }
 
             .upsell {
@@ -1315,6 +1328,8 @@
                 &_wrapper {
                     text-align: center;
                     position: relative;
+                    justify-content: center;
+                    padding: 0 rem(10);
 
                     &:hover {
                         .upsell_text {
