--- a/olivia-burton-uk/cartridges/app_custom_ob_uk/cartridge/client/default/scss/text/_productDetails.scss
+++ b/olivia-burton-uk/cartridges/app_custom_ob_uk/cartridge/client/default/scss/text/_productDetails.scss
@@ -401,10 +401,16 @@
       padding-top: rem(15);
       border-top: rem(2) solid $white-gray;
   }
-
+  
   &-products {
+    display: flex;
+
+      .slick-track {
+        width: rem(310)!important;
+      }
       .slick-slide {
           padding: 0 rem(10);
+          width: rem(155)!important;
       }
 
       .upsell {
@@ -412,7 +418,10 @@
           &-wrapper {
               text-align: center;
               position: relative;
-              border: rem(1) solid $gray92;
+              width: rem(155);
+              justify-content: center;
+              padding: 0 rem(10);
+              height: auto;
 
               &:hover {
                   .upsell-text {
@@ -433,7 +442,7 @@
               }
 
               &-inner {
-                  border: none;
+                  border: rem(1) solid $gray92;
               }
           }
 
